styles/pages/items/styles.module.scss
@import '@/styles/variable.scss';

.item-info-container {
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
}

.main-container {
  flex-grow: 1;
  position: relative;
}

.warning-container {
  padding: 2rem;
  white-space: pre-wrap;
  background-color: $white;
  overflow-y: auto;
  border-top: 1px solid $gray300;
  height: 100%;
}

.overlay {
  z-index: 2;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.4);
}

.overlay.closed {
  display: none;
}

.selected-option-container {
  border-top: 1px solid $gray300;
  padding: 2rem;
  background-color: $white;
}

.selected-option {
  padding: 1.5rem;
  background-color: $container-bg;
  font-weight: 400;
  font-size: 1.4rem;
  color: $gray800;
  user-select: none;
  cursor: pointer;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.pencil-icon {
  width: 1.2rem;
  height: 1.2rem;
}

.sub-container {
  width: 100%;
  position: relative;
}

.item-toggle-button {
  width: 100%;
  font-weight: 500;
  font-size: 1.6rem;
  letter-spacing: 3px;
  background-color: $highlight;
  color: $white;
  height: 100%;
  padding: 2.4rem;
}

.item-toggle-button:disabled {
  background-color: $gray500;
}

.options {
  opacity: 1;
  position: absolute;
  bottom: -30rem;
  transition: bottom 400ms ease, opacity 200ms ease;
}

.options.open {
  opacity: 1;
  bottom: 100%;
}

